--- a/requirements.txt
+++ b/requirements.txt
@@ -1,136 +1,4 @@
-altgraph==0.17.3
-anyio==4.9.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==3.0.0
-async-lru==2.0.5
-attrs==25.3.0
-auto-py-to-exe==2.35.0
-babel==2.17.0
-beautifulsoup4==4.13.4
-bleach==6.2.0
-bottle==0.12.25
-bottle-websocket==0.2.9
-certifi==2024.8.30
-cffi==1.15.1
-chardet==5.1.0
-charset-normalizer==3.4.0
-colorama==0.4.6
-comm==0.2.2
-debugpy==1.8.14
-decorator==5.2.1
-defusedxml==0.7.1
-Eel==0.16.0
-exceptiongroup==1.2.2
-executing==2.2.0
-fastjsonschema==2.21.1
-filelock==3.18.0
-fqdn==1.5.1
-fsspec==2025.3.2
-future==0.18.3
-gevent-websocket==0.10.1
-greenlet==2.0.2
-h11==0.16.0
-httpcore==1.0.9
-httpx==0.28.1
-idna==3.10
-importlib_metadata==8.6.1
-ipykernel==6.29.5
-ipython==8.18.1
-ipywidgets==8.1.6
-isoduration==20.11.0
-jedi==0.19.2
-Jinja2==3.1.6
-json5==0.12.0
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2025.4.1
-jupyter==1.1.1
-jupyter-console==6.6.3
-jupyter-events==0.12.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyter_server==2.15.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.4.1
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.14
-MarkupSafe==3.0.2
-matplotlib-inline==0.1.7
-mistune==3.1.3
-MouseInfo==0.1.3
-mpmath==1.3.0
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.2.1
-notebook==7.4.1
-notebook_shim==0.2.4
-numpy==1.24.3
-opencv-python==4.7.0.72
-overrides==7.7.0
-packaging==25.0
-pandocfilters==1.5.1
-parso==0.8.4
-pefile==2023.2.7
-Pillow==9.5.0
-platformdirs==4.3.7
-prometheus_client==0.21.1
-prompt_toolkit==3.0.51
-psutil==7.0.0
-pure_eval==0.2.3
-PyAutoGUI==0.9.53
-pycparser==2.21
-PyGetWindow==0.0.9
-Pygments==2.19.1
-pyinstaller==5.11.0
-pyinstaller-hooks-contrib==2023.3
-PyMsgBox==1.0.9
-pyparsing==3.0.9
-pyperclip==1.8.2
-PyRect==0.2.0
-PyScreeze==0.1.28
-python-dateutil==2.9.0.post0
-python-json-logger==3.3.0
-pytweening==1.0.4
-pywin32==310
-pywin32-ctypes==0.2.0
-pywinpty==2.0.15
-PyYAML==6.0.2
-pyzmq==26.4.0
-questionary==1.10.0
-referencing==0.36.2
-requests==2.32.3
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.24.0
-Send2Trash==1.8.3
-six==1.17.0
-sniffio==1.3.1
-soupsieve==2.7
-stack-data==0.6.3
-sympy==1.13.1
-terminado==0.18.1
-tinycss2==1.4.0
-tomli==2.2.1
-torch==2.6.0
-tornado==6.4.2
-traitlets==5.14.3
-types-python-dateutil==2.9.0.20241206
-typing_extensions==4.13.1
-uri-template==1.3.0
-urllib3==2.2.3
-wcwidth==0.2.6
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
-whichcraft==0.6.1
-widgetsnbextension==4.0.14
-xlrd2==1.3.4
-zipp==3.21.0
-zope.event==4.6
-zope.interface==6.0
+Django>=4.0
+djangorestframework
+gunicorn
+psycopg2-binary
