--- a/requirements.txt
+++ b/requirements.txt
@@ -108,6 +108,7 @@ requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.24.0
+setuptools>=80.0.0
 Send2Trash==1.8.3
 six==1.17.0
 sniffio==1.3.1
