--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+--no-build-isolation
+--use-pep517=false
 altgraph==0.17.3
 anyio==4.9.0
 argon2-cffi==23.1.0
@@ -135,3 +137,9 @@ xlrd2==1.3.4
 zipp==3.21.0
 zope.event==4.6
 zope.interface==6.0
+Django>=3.2,<5.0
+gunicorn
+psycopg2-binary
+whitenoise
+setuptools>=58.0.0
+django-cors-headers
