--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
---no-build-isolation
---use-pep517=false
 altgraph==0.17.3
 anyio==4.9.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
+asgiref==3.8.1
 asttokens==3.0.0
 async-lru==2.0.5
 attrs==25.3.0
@@ -23,6 +22,7 @@ comm==0.2.2
 debugpy==1.8.14
 decorator==5.2.1
 defusedxml==0.7.1
+Django==4.2.23
 Eel==0.16.0
 exceptiongroup==1.2.2
 executing==2.2.0
@@ -110,11 +110,11 @@ requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.24.0
-setuptools>=80.0.0
 Send2Trash==1.8.3
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.7
+sqlparse==0.5.3
 stack-data==0.6.3
 sympy==1.13.1
 terminado==0.18.1
@@ -125,6 +125,7 @@ tornado==6.4.2
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20241206
 typing_extensions==4.13.1
+tzdata==2025.2
 uri-template==1.3.0
 urllib3==2.2.3
 wcwidth==0.2.6
@@ -137,9 +138,3 @@ xlrd2==1.3.4
 zipp==3.21.0
 zope.event==4.6
 zope.interface==6.0
-Django>=3.2,<5.0
-gunicorn
-psycopg2-binary
-whitenoise
-setuptools>=58.0.0
-django-cors-headers
