--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ debugpy==1.8.14
 decorator==5.2.1
 defusedxml==0.7.1
 Django==4.2.23
+djangorestframework
 exceptiongroup==1.2.2
 executing==2.2.0
 fastjsonschema==2.21.1
