--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ decorator==5.2.1
 defusedxml==0.7.1
 Django==4.2.23
 djangorestframework
+django-cors-headers
 exceptiongroup==1.2.2
 executing==2.2.0
 fastjsonschema==2.21.1
@@ -127,3 +128,4 @@ zipp==3.21.0
 zope.event==4.6
 zope.interface==6.0
 gunicorn
+psycopg2-binary
